--- a/DAYSEEKER/style.css
+++ b/DAYSEEKER/style.css
@@ -70,6 +70,10 @@ header li{
 .menu{
     display: none;
 }
+header a{
+    text-decoration: none;
+    color: var(--primary-color);
+}
 /*---------------------img-------------------------*/
 .img{
     max-height: 50vh;
